# nexus-big-data

./: .coverage  PHASE2_SUMMARY.txt  README.md  docker-compose.yml  lox_delivery_export.csv  lox_hosp_data.csv  lox_truck.csv  plants_data.csv  plants_production_export.csv  pyproject.toml  setup.sh
ManOxCo-platform-main-baseline-main/ManOxCo-platform-main-baseline-main/: LICENSE  README.md  manoxco_use_case.md
ManOxCo-platform-main-baseline-main/ManOxCo-platform-main-baseline-main/data/data_source/: lox_delivery_export.csv  lox_hosp_data.csv  lox_truck.csv  plants_data.csv  plants_production_export.csv
Resources/: Manoxco-usecase.md  PI-1
docs/: ARCHITECTURE.md  OPERATIONS.md  PHASE2_IMPLEMENTATION.md
src/: __init__.py  config.py  logging.py  spark.py
src/ai/: __init__.py
src/analytics/: __init__.py
src/governance/: __init__.py
src/ingestion/: __init__.py  batch.py  profiler.py  streaming.py  validators.py
src/medallion/: __init__.py
src/nexus_pi1_manoxco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: __init__.py  test_ingestion_integration.py  test_medallion_integration.py
tests/unit/: __init__.py  test_ingestion.py
